# sandbox

./: .clang-format  .gitignore  CMakeLists.txt  Config.h.in  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  confg.yml  config.yml  feature_request.md  task.md  test.md
.github/ISSUE_TEMPLATE/templates/: task.md
.github/PULL_REQUEST_TEMPLATE/: pr-generic.md  pull_request_template.md
.github/workflows/: assign-project.yml  pr-automerge.yml  pr-checker.yml
hooks/: pre-commit
src/: main.cpp
